--- a/edgar-villalba.html
+++ b/edgar-villalba.html
@@ -73,7 +73,7 @@
                 <h2 class="profile-name">Edgar Villalba</h2>
                 <h5>Accountant</h5>
                 <p class="bio">
-                    Curso la Carrera de Licenciatura en Contaduría en la Universidad  Nacional Autónoma de México; Cuenta con mas de 10 años de experiencia en compañías del sector financiero , servicios y comerciales ;Trabajo en Nacional Financiera SNC en el Área de Contabilidad Fiduciaria en la revisión y elaboración de estados financieros bajo normas mexicanas e internacionales.</p>
+                    Accountant by National Autonomous University of Mexico. He has more than 10 years in financial, services and comercial companies. He worked in Nafinsa SNC in the Department of Fidutiary Accountability in the analysis and elaboration of financial statements under Mexican and International policies.</p>
 
                 <div class="social-icons">
                     <a class="linkedin"><a href="" target="_blank"><img src="style/images/art/btn-linkedin.png"></a>
