--- a/portfolio-colombia.html
+++ b/portfolio-colombia.html
@@ -75,7 +75,9 @@
     <div class="row">
       <div class="span4">
         <img class="company-logo" src="style/images/art/logo-cm.png">
-        <figure class="media-wrapper"><img src="style/images/art/criticalmasser.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.criticalmasser.com">
+          <img src="style/images/art/criticalmasser.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p>Automated Social Epidemics for the Digital World</p> -->
         </div>
@@ -84,7 +86,9 @@
       <!-- /.span4 -->
       <div class="span4">
         <img class="company-logo" src="style/images/art/logo-platzi.png">
-        <figure class="media-wrapper"><img src="style/images/art/platzi.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.platzi.com">
+          <img src="style/images/art/platzi.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p>Livestreamed classes on programming, design, business and marketing. Learn from industry leaders</p> -->
         </div>
