--- a/portfolio-mexico.html
+++ b/portfolio-mexico.html
@@ -108,15 +108,22 @@
 
        <div class="span4">
         <img class="company-logo"src="style/images/art/logo-luuna.png">
-        <figure class="media-wrapper"><img src="style/images/art/luuna.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.luuna.mx">
+          <img src="style/images/art/luuna.jpg" alt="" />
+        </a>
+        </figure>
         <div class="details">
           <!-- <p class="company-description">El colchón premium a un precio honesto</p> -->
         </div>
       </div>
 
+
        <div class="span4">
         <img class="company-logo" src="style/images/art/logo-miora.png">
-        <figure class="media-wrapper"><img src="style/images/art/miora.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.miora.mx">
+          <img src="style/images/art/miora.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p class="company-description">Reserva online en los mejores centros de belleza</p> -->
         </div>
@@ -124,7 +131,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-miroculus.png">
-        <figure class="media-wrapper"><img src="style/images/art/miroculus.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.miroculus.com">
+          <img src="style/images/art/miroculus.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p class="company-description">MicroRNA detection platform</p> -->
         </div>
@@ -132,7 +141,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-msb.png">
-        <figure class="media-wrapper"><img src="style/images/art/msb.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.mysportsbox.com">
+          <img src="style/images/art/msb.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p class="company-description">La forma inteligente de apostar</p> -->
         </div>
@@ -140,7 +151,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-nubleer.png">
-        <figure class="media-wrapper"><img src="style/images/art/nubleer.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.nubleer.com">
+          <img src="style/images/art/nubleer.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p class="company-description">Acceso ilimitado a tus revistas favoritas</p> -->
         </div>
@@ -148,7 +161,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-opi.png">
-        <figure class="media-wrapper"><img src="style/images/art/opi.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.opi.la">
+          <img src="style/images/art/opi.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p class="company-description">Mejor información, mejores decisiones</p> -->
         </div>
@@ -156,7 +171,9 @@
 
        <div class="span4">
         <img class="company-logo"src="style/images/art/logo-petsy.png">
-        <figure class="media-wrapper"><img src="style/images/art/petsy.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.petsy.mx">
+          <img src="style/images/art/petsy.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p class="company-description">Compra accesorios para mascotas online, entrega a domicilio</p> -->
         </div>
@@ -164,7 +181,9 @@
 
        <div class="span4">
         <img class="company-logo"src="style/images/art/logo-seenapse.png">
-        <figure class="media-wrapper"><img src="style/images/art/seenapse.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.seenapse.it">
+          <img src="style/images/art/seenapse.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p class="company-description">Get more and better ideas, faster.</p> -->
         </div>
@@ -172,7 +191,9 @@
 
         <div class="span4">
         <img class="company-logo"src="style/images/art/logo-tp.png">
-        <figure class="media-wrapper"><img src="style/images/art/talentprocess.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.talentprocess.com">
+          <img src="style/images/art/talentprocess.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p class="company-description">Optimizamos y automatizamos el proceso de reclutamiento</p> -->
         </div>
@@ -180,7 +201,9 @@
 
        <div class="span4">
         <img class="company-logo"src="style/images/art/logo-tapptime.png">
-        <figure class="media-wrapper"><img src="style/images/art/tt.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.tapptime.com">
+          <img src="style/images/art/tt.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p class="company-description">Gana premios solo por jugar</p> -->
         </div>
@@ -188,7 +211,9 @@
 
        <div class="span4">
         <img class="company-logo"src="style/images/art/logo-voxfeed.png">
-        <figure class="media-wrapper"><img src="style/images/art/voxfeed.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.voxfeed.com">
+          <img src="style/images/art/voxfeed.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p class="company-description">Conecta con las marcas que te gustan y gana dinero recomendándolas en tus redes sociales.</p> -->
         </div>
