--- a/portfolio-chile.html
+++ b/portfolio-chile.html
@@ -75,7 +75,9 @@
     <div class="row">
       <div class="span4">
         <img class="company-logo" src="style/images/art/logo-capitalizarme.png">
-        <figure class="media-wrapper"><img src="style/images/art/capitalizarme.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.capitalizarme.com">
+          <img src="style/images/art/capitalizarme.jpg" alt="" /></figure>
         <div class="details">
         <!--   <p>La mejor forma de invertir en Propiedades</p> -->
         </div>
@@ -84,7 +86,9 @@
 
       <div class="span4">
         <img class="company-logo" src="style/images/art/logo-clubpoint.png">
-        <figure class="media-wrapper"><img src="style/images/art/clubpoint.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.clubpoint.com">
+          <img src="style/images/art/clubpoint.jpg" alt="" /></figure>
         <div class="details">
 <!--           <p>Tu club privado de compras</p> -->
         </div>
@@ -92,7 +96,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-cranberry.png">
-        <figure class="media-wrapper"><img src="style/images/art/cranberry.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.cranberrychic.com">
+          <img src="style/images/art/cranberry.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p>La red social de moda</p> -->
         </div>
@@ -100,7 +106,9 @@
 
        <div class="span4">
         <img class="company-logo" src="style/images/art/logo-eltelon.png">
-        <figure class="media-wrapper"><img src="style/images/art/eltelon.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.eltelon.cl">
+          <img src="style/images/art/eltelon.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p>Cientos de canales de tv y radios en vivo</p> -->
         </div>
@@ -108,7 +116,9 @@
 
        <div class="span4">
         <img class="company-logo"src="style/images/art/logo-glamit.png">
-        <figure class="media-wrapper"><img src="style/images/art/glamit.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.glamit.com.ar/">
+          <img src="style/images/art/glamit.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p> El primer proveedor integral de ecommerce</p> -->
         </div>
@@ -116,7 +126,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-misabogados.png">
-        <figure class="media-wrapper"><img src="style/images/art/misabogados.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.logo-misabogados.com">
+          <img src="style/images/art/misabogados.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p>Buscamos al mejor abogado para tu caso</p> -->
         </div>
@@ -124,7 +136,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-nubelo.png">
-        <figure class="media-wrapper"><img src="style/images/art/nubelo.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.nubelo.com">
+          <img src="style/images/art/nubelo.jpg" alt="" /></figure>
         <div class="details">
           <!-- <p>Conectamos los mejores profesionales y empresas</p> -->
         </div>
@@ -132,7 +146,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-poliglota.png">
-        <figure class="media-wrapper"><img src="style/images/art/poliglota.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.poliglota.org">
+          <img src="style/images/art/poliglota.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p>Aprende idiomas en bares y cafés de todo el mundo</p> -->
         </div>
@@ -140,7 +156,9 @@
 
       <div class="span4">
         <img class="company-logo"src="style/images/art/logo-recorrido.png">
-        <figure class="media-wrapper"><img src="style/images/art/recorrido.jpg" alt="" /></figure>
+        <figure class="media-wrapper">
+          <a href="https://www.recorrido.cl">
+          <img src="style/images/art/recorrido.jpg" alt="" /></figure>
         <div class="details">
          <!--  <p>Encuentra el mejor pasaje de bus</p> -->
         </div>
