Estilos actualizados para hom

--- a/index.html
+++ b/index.html
@@ -91,22 +91,23 @@
                     <img src="style/images/builder-colombia.png">
                 </div> -->
                 <div class="mx-logo">
-                    <a href="http://builder.vc/" target="_blank"><img src="style/images/builder-mx.png">
+                    <a href="http://builder.vc/" target="_blank"><img src="style/images/builder-mx.png"></a>
                 </div>
                 <div class="latam-logo">
-                    <a href="http://latam.builders/" target="_blank"> <img src="style/images/builder-latam.png">
+                    <a href="http://latam.builders/" target="_blank"> <img src="style/images/builder-latam.png"></a>
                 </div>
             </div>
         </div>
-        <footer>
-          <div id="footer" class="navbar">
-            <div class="footer-background">
-                <div class="legal">
-                    <p>Mountain Nazca 2016</p>
-                </div>
-            </div>
-        </footer>
+
     </div>
+    <footer>
+      <div id="footer" class="navbar">
+        <div class="footer-background">
+            <div class="legal">
+                <p>Mountain Nazca 2016</p>
+            </div>
+        </div>
+    </footer>
     <script src="style/js/jquery.js"></script>
     <script src="style/js/bootstrap.min.js"></script>
     <script src="style/js/twitter-bootstrap-hover-dropdown.min.js"></script>
